<resources>
    <string name="app_name">Bookmark Directory</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bookmark Folder</string>
    <string name="nav_header_subtitle">Manage urls like files</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_url">Add url</string>
    <string name="edit">Edit</string>
    <string name="create_folder">Create new folder</string>
    <string name="new_folder">New folder</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="title">Title</string>
    <string name="url">URL</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="copy_url">Copy URL</string>
    <string name="open">Open</string>
    <string name="memo">Memo</string>
    <string name="set_password">Set password</string>
    <string name="password">Password</string>
    <string name="password_cannot_be_changed">NOTE: Password cannot be changed</string>
    <string name="please_enter_the_password">Please enter the password</string>
    <string name="opened_all_folder">Opened all folders</string>
    <string name="closed_all_folder">Closed all folders</string>
    <string name="folder_delete_dialog">Folder delete confirmation</string>
    <string name="floating_button">Floating button</string>
</resources>